fix error that was being brought up

--- a/app/views/auth/signup.erb
+++ b/app/views/auth/signup.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <a href="/login" id="login">Login</a> | Signup<br><br>
+  <a href="/login" id="login">Login</a><br><br>
 
 <%= display_error %>
 
