--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="box">
-    Login | <a href="/signup" id="signup">Signup</a><br><br>
-    <form action="/login" method="POST">
+    <a href="/signup" id="signup">Signup</a><br><br>
+           <form action="/login" method="POST">
 
     <%= login_error %>
-
+ <h1><span>Login Now: </span></h1><br>
     Username:
     <input type="text" name="user[username]">
    <span> Password:</span>
