create new pages, edit around with each of the pages to make it look kind of better

--- a/app/views/auth/signup.erb
+++ b/app/views/auth/signup.erb
@@ -1,20 +1,19 @@
-<div class="container">
-  <a href="/login" id="login">Login</a><br><br>
 
+<center><div class="container">
 <%= display_error %>
-
+<h1>Register Now</h1>
   <form action="/signup" method="POST">
     Username:
-    <input type="text" name="user[username]">
+    <input type="text" name="user[username]"><br>
     <span> Password:</span>
-    <input type="password" name="user[password]">
+    <input type="password" name="user[password]"><br>
     Confirm Password:
     <input type="password" name="user[password_confirmation]">
     <input type="submit" value="Signup!" id="button">
   </form>
 </div>
 
-<div class="bottom_background"></div>
-<div class="bottom">
+<div></div>
+<div >
 
-</div>
+</div></center>
