--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,20 +1,17 @@
-<div class="container">
-  <div class="box">
-    <a href="/signup" id="signup">Signup</a><br><br>
-           <form action="/login" method="POST">
 
-    <%= login_error %>
- <h1><span>Login Now: </span></h1><br>
-    Username:
-    <input type="text" name="user[username]">
-   <span> Password:</span>
-    <input type="password" name="user[password]">
-    <input type="submit" value="Login!" id="button">
+
+
+
+<div>
+
+
+<h1>Welcome</h1>
+<a href='/soundcloud'><span>Soundcloud</span>
+<form class="navbar-form navbar-left">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Search">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
     </form>
-  </div>
-</div>
-
-<div class="bottom_background"></div>
-<div class="bottom">
 
 </div>
