--- a/app/views/playlist/_create_playlist.erb
+++ b/app/views/playlist/_create_playlist.erb
@@ -1,7 +1,10 @@
 <%= display_error %>
-
+<center><div>
 <form action="/playlists/all" method="POST"><br><br>
-    <input type="submit" value="Make Playlist." id="button">
   Playlist Name:
-    <input name="name" type="text" >
+    <input name="name" type="text" ><br>
+    <form action="/playlists/all" method="POST"><br>
+    <input type="submit" value="Make Playlist." id="button">
 </form>
+
+</div></center>
