--- a/app/views/playlist/all.erb
+++ b/app/views/playlist/all.erb
@@ -2,19 +2,14 @@
   <%= erb :_nav_bar %>
 </div>
 
-<div class="bottom_background"></div>
-
-
-<div class="bottom">
+<div>
 
   <%= erb :'playlist/_create_playlist' %>
 
-  <div class="all_playlists"><br><br>
+  <div><br><br>
     <% @playlists.each do |playlist| %>
       <div class="playlist"><a href="/playlists/<%= playlist.id %>"><%= playlist.name %></a>
-        <% playlist.songs.each do |song| %>
-          <p class="song"><a href="/songs/<%= song.id %>"><%= song.title %></a></p>
-        <% end %></div>
+      
     <% end %><br><br>
   </div>
 </div>
