--- a/app/views/playlist/one.erb
+++ b/app/views/playlist/one.erb
@@ -2,20 +2,20 @@
  <%= erb :_nav_bar %>
 </div>
 
-<div class="bottom_background"></div>
+<div></div>
 
-<div class="bottom">
-  <div class="one_top"><br>
+<div>
+  <div><br>
     <h1><%= @playlist.name %></h1>
 
     <%= erb :'song/_create_song', :locals => {playlist: @playlist} %>
     <%= erb :'/playlist/_edit_delete_playlist', :locals => {playlist: @playlist} %><br><br>
   </div>
 
-  <div class="all_songs"><br><br>
+  <div><br><br>
     Tracks:
     <ol><% @songs.each do |song| %>
-      <li> <a href="/songs/<%= song.id %>"><img src="<%= song.album_art %>"/></a></li>
+      <li> <a href="/songs/<%= song.id %><%= song.title%>"><%= song.title%></a></li>
     <% end %></ol>
   </div>
 
