--- a/app/views/song/my_songs.erb
+++ b/app/views/song/my_songs.erb
@@ -8,7 +8,7 @@
   <h1>My Songs</h1>
   <div class="all_songs"><br><br>
     <% @songs.each do |song| %>
-      <div class="my_songs"><a href="/songs/<%= song.id %>"><img src="<%= song.title %>"/></a>
+      <div class="my_songs"><a href="/songs/<%= song.id %>"><%= song.title %>"/></a>
       <%= song.title %></div>
     <% end %>
   </div>
