add new pages, reformat links to show up correctly, fix errors

--- a/app/views/_nav_bar.erb
+++ b/app/views/_nav_bar.erb
@@ -1,4 +1,3 @@
-<div>
- Welcome: <%= current_user.username %> 
-    <a href='/playlists/all' id="all_playlists_link">All Playlists</a> | <a href='/my_playlists' id="my_playlists_link">My Playlists</a> | <a href='/my_songs' id="my_songs_link">My Songs</a> | <a href='/soundcloud'><span>Soundcloud</span></a>
+<center><div>
+    <a href='/playlists/all' id="all_playlists_link">All Playlists</a> | <a href='/my_playlists' id="my_playlists_link">My Playlists</a> | <a href='/my_songs' id="my_songs_link">My Songs</a> | <a href='/soundcloud'><span>Search Soundcloud</span></a>
 </div>
