--- a/app/views/playlist/_create_playlist.erb
+++ b/app/views/playlist/_create_playlist.erb
@@ -1,10 +1,10 @@
 <%= display_error %>
 <center><div>
 <form action="/playlists/all" method="POST"><br><br>
-  Playlist Name:
-    <input name="name" type="text" ><br>
-    <form action="/playlists/all" method="POST"><br>
-    <input type="submit" value="Make Playlist." id="button">
+  <u><strong>Playlist Name:</u></strong>
+    <input name="name" type="text" >
+    <form action="/playlists/all" method="POST">
+    <input type="submit" value="Create" id="button">
 </form>
 
 </div></center>
