--- a/app/views/playlist/one.erb
+++ b/app/views/playlist/one.erb
@@ -1,22 +1,24 @@
-<div class="container">
- <%= erb :_nav_bar %>
-</div>
 
-<div></div>
+<center><div>
+  <div>
 
-<div>
-  <div><br>
     <h1><%= @playlist.name %></h1>
+  <% if logged_in? %>
+    <% if @playlist.user == current_user %>
 
     <%= erb :'song/_create_song', :locals => {playlist: @playlist} %>
     <%= erb :'/playlist/_edit_delete_playlist', :locals => {playlist: @playlist} %><br><br>
+
+    <% end %>
+     <% end %>
+    <%else%>
+    Tracks:<br>
+    <% @songs.each do |song| %>
+       <a href="/songs/<%= song.id %>"><%= song.title%></a>
+
+    <% end %>
+
+
   </div>
 
-  <div><br><br>
-    Tracks:
-    <ol><% @songs.each do |song| %>
-      <li> <a href="/songs/<%= song.id %><%= song.title%>"><%= song.title%></a></li>
-    <% end %></ol>
-  </div>
-
-</div>
+</div></center>
