--- a/app/views/song/_create_song.erb
+++ b/app/views/song/_create_song.erb
@@ -1,8 +1,9 @@
 <%= display_error %>
-
+<% if logged_in? %>
 <form action="/my_songs" method="POST">
     <input type="hidden" value="<%= playlist.id %>" name="song[playlist_id]">
   Song Title:
     <input name="song[title]" type="text"> Song URL: <input name="song[song_url]" type="text">
     <input type="submit" value="Make Song." id="button">
 </form>
+<%end%>
