--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,13 +5,17 @@
 <div>
 
 
-<h1>Welcome</h1>
-<a href='/soundcloud'><span>Soundcloud</span>
-<form class="navbar-form navbar-left">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+<center><h1>Welcome</h1></center>
 
+<div class ="container">
+
+<div class ="container">
+
+<div><br><br>
+    <% @playlists.each do |playlist| %>
+     <div><a href="/playlists/<%= playlist.id %>"><%= playlist.name %></a>
+    <% end %>
+  </div>
 </div>
+
+
