--- a/app/views/song/_edit_delete_song.erb
+++ b/app/views/song/_edit_delete_song.erb
@@ -1,3 +1,4 @@
+<% if logged_in? %>
 <% if song.user_id == current_user.id %>
   <form action="/songs/<%= song.id %>" method="POST">
     <input type="hidden" name="_method" value="DELETE">
@@ -14,4 +15,5 @@
       <input type="submit" value="Edit this song"><br>
   </form>
 <% else %>
+<% end %>
 <% end %>
