--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -24,12 +24,13 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
   <script src="/js/application.js"></script>
-  <script src="/js/auth.js"></script>
-  <script src="/js/playlists.js"></script>
-  <script src="/js/songs.js"></script>
+
   <script src="http://connect.soundcloud.com/sdk.js"></script>
 
+ <script src="js/index.js"></script>
 
+ <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/application.css">
   <title>Singh</title>
 </head>
 <body>
@@ -59,9 +60,11 @@
     </ul>
   </div>
 </nav>
+
 <% if logged_in? %>
   <center> <%= erb :_nav_bar %></center>
   <%end%>
   <%= yield %>
 </body>
+
 </html>
