--- a/app/views/playlist/_edit_delete_playlist.erb
+++ b/app/views/playlist/_edit_delete_playlist.erb
@@ -1,14 +1,14 @@
 <% if playlist.user == current_user %>
-  <form action="/playlists/<%= playlist.id %>" method="POST">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete This Playlist" id="button">
-  </form>
 
   <form action="/playlists/<%= playlist.id %>" method="POST">
-      <input type="hidden" name="_method" value="PUT">
+      <input type="hidden" name="_method" value="PUT"><br>
     Edit PlayList:
       <input name="playlist[name]" type="text" value="<%= playlist.name %>">
       <input type="submit" value="Change your playlist name" id="button"><br>
+  </form><br><br>
+    <form action="/playlists/<%= playlist.id %>" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete This Playlist" id="button">
   </form>
 <% else %>
 
