minor changes to the files

--- a/app/views/playlist/all.erb
+++ b/app/views/playlist/all.erb
@@ -12,7 +12,7 @@
 <br>
 <br>
 <br>
-<u><h1>All PlayLists:</h1></u>
+<u><h1>PlayLists:</h1></u>
 
     <% @playlists.each do |playlist| %>
      <ol><a href="/playlists/<%= playlist.id %>"><%= playlist.name %></a></ol>
