everything works the way it needs too

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,7 +6,7 @@
 <br><br>
 <br><br>
 <br><br>
-<center><h1>Welcome</h1></center>
+<center><h1><span style="color:red">Wel</span>come</h1></center>
 
 <br><br>
     <p><% @playlists.each do |playlist| %>
