--- a/app/views/playlist/_create_playlist.erb
+++ b/app/views/playlist/_create_playlist.erb
@@ -1,7 +1,7 @@
 <%= display_error %>
 <center><div>
 <form action="/playlists/all" method="POST"><br><br>
-  <u><strong>Playlist Name:</u></strong>
+  <u><strong>Play<span style="color:brown">list</span> Na<span style="color:blue">me:</span></u></strong>
     <input name="name" type="text" >
     <form action="/playlists/all" method="POST">
     <input type="submit" value="Create" id="button">
