--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,13 +31,13 @@
 
  <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/application.css">
-  <title>Singh</title>
+  <title>Make1too</title>
 </head>
 <body>
  <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Singh</a>
+      <a class="navbar-brand" href="/">Make1too</a>
     </div>
     <ul class="nav navbar-nav">
       <li ><a href="/">Home</a></li>
